--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
   </div>
 
   <div id="instagram-video-container">
+    <h2>Video from Korteidet</h2>
+    <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DKxCoz_tbzW/" data-instgrm-version="14" style=" background:#FFF; border:0; margin: 0 auto 20px auto; max-width:540px; width:100%; padding:0; box-shadow:none;">
+    </blockquote>
+
     <h2>Video from Lyfjorddalen</h2>
     <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DL8NKszNihY/" data-instgrm-version="14" style=" background:#FFF; border:0; margin: 0 auto; max-width:540px; width:100%; padding:0; box-shadow:none;">
     </blockquote>
