--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
   }
   .instagram-video-block {
     width: 260px; /* smalere video */
+    border: 1.5px solid #ccc;
+    border-radius: 12px;
+    padding: 12px;
+    margin: 8px 0;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    background-color: white;
   }
   .instagram-video-block h2 {
     color: #0066cc;
