--- a/index.html
+++ b/index.html
@@ -79,16 +79,18 @@
     gap: 24px;
     flex-wrap: wrap;
   }
-  .instagram-video-block {
-    width: 320px;           /* økt bredde */
-    border: 1.5px solid #ccc;
-    border-radius: 12px;
-    padding: 16px;          /* økt padding */
-    margin: 8px 0;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    background-color: white;
-    box-sizing: border-box;
-  }
+.instagram-video-block {
+  width: 340px;           /* litt bredere */
+  border: 1.5px solid #ccc;
+  border-radius: 12px;
+  padding: 20px;          /* mer padding */
+  margin: 12px 8px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  background-color: white;
+  box-sizing: border-box;
+  overflow: hidden;       /* skjuler innhold som går utenfor */
+}
+
   .instagram-video-block h2 {
     color: #0066cc;
     margin-bottom: 8px;
