--- a/index.html
+++ b/index.html
@@ -70,39 +70,39 @@
     color: #555;
   }
   #instagram-video-container {
-    max-width: 720px;
+    max-width: 740px; /* Litt bredere */
     margin: 20px auto 0 auto;
     text-align: center;
 
     display: flex;
     justify-content: center;
     gap: 24px;
-    flex-wrap: nowrap;    /* Hold videoene på samme linje */
-    overflow-x: auto;     /* Tillat horisontal scroll om nødvendig */
-    padding-bottom: 10px; /* Unngå clipping ved scroll */
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    padding-bottom: 10px;
   }
   .instagram-video-block {
-    width: 340px;           /* Passer 2 videoer side om side */
-    border: 1.5px solid #ccc;
-    border-radius: 12px;
-    padding: 20px;
-    margin: 12px 0;         /* Fjernet horisontal margin */
-    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    width: 360px;          /* Større ramme */
+    border: 2px solid #ccc;
+    border-radius: 14px;
+    padding: 22px;
+    margin: 12px 0;
+    box-shadow: 0 3px 8px rgba(0,0,0,0.12);
     background-color: white;
     box-sizing: border-box;
     overflow: hidden;
   }
-
   .instagram-video-block h2 {
     color: #0066cc;
-    margin-bottom: 8px;
+    margin-bottom: 10px;
     font-size: 18px;
   }
   .instagram-video-block blockquote {
     background: #FFF;
     border: 0;
     margin: 0 auto;
-    width: 100%;
+    width: 320px;           /* Embed-video litt mindre enn ramme */
+    max-width: 100%;
     padding: 0;
     box-shadow: none;
   }
@@ -120,14 +120,17 @@
     }
     #instagram-video-container {
       max-width: 95vw;
-      flex-wrap: wrap;      /* Tillat wrapping på mobil */
+      flex-wrap: wrap;
     }
     .instagram-video-block {
-      width: 100%;          /* Fyll bredden på mobil */
+      width: 100%;
       margin: 12px 0;
     }
     .instagram-video-block h2 {
       font-size: 16px;
+    }
+    .instagram-video-block blockquote {
+      width: 100%;
     }
   }
 </style>
@@ -155,7 +158,7 @@
   </button>
 
   <div id="instagram-text">
-    You can see pictures and video from Top Rope Solo on this profile
+    You can see pictures and videos from Top Rope Solo on this profile
   </div>
 
   <div id="instagram-video-container">
@@ -179,16 +182,16 @@
         lat: 69.69472,
         lng: 18.63642,
         popup: `<strong>Korteidet</strong><br>
-                Her kommer det mer informasjon om Korteidet.<br>
-                <a href="https://klatreforer.tromsoklatring.no/area/3062" target="_blank" rel="noopener noreferrer">Klatrefører - Korteidet</a>`
+                More information about Korteidet will be added here.<br>
+                <a href="https://klatreforer.tromsoklatring.no/area/3062" target="_blank" rel="noopener noreferrer">Climbing guide - Korteidet</a>`
       },
       {
         name: 'Lyfjorddalen',
         lat: 69.78386,
         lng: 18.78913,
         popup: `<strong>Lyfjorddalen</strong><br>
-                Her kommer det mer informasjon om Lyfjorddalen.<br>
-                <a href="https://klatreforer.tromsoklatring.no/area/2868" target="_blank" rel="noopener noreferrer">Klatrefører - Lyfjorddalen</a>`
+                More information about Lyfjorddalen will be added here.<br>
+                <a href="https://klatreforer.tromsoklatring.no/area/2868" target="_blank" rel="noopener noreferrer">Climbing guide - Lyfjorddalen</a>`
       }
     ];
 
@@ -207,7 +210,7 @@
       markers[name] = marker;
     });
 
-    // Zoom ut til alle markører ved oppstart
+    // Zoom out to show all markers on start
     const group = new L.featureGroup(Object.values(markers));
     map.fitBounds(group.getBounds().pad(0.2));
 
