--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     color: #555;
   }
   #instagram-video-container {
-    max-width: 740px; /* Litt bredere */
+    max-width: 720px;
     margin: 20px auto 0 auto;
     text-align: center;
 
@@ -78,11 +78,10 @@
     justify-content: center;
     gap: 24px;
     flex-wrap: nowrap;
-    overflow-x: auto;
-    padding-bottom: 10px;
+    overflow-x: auto; /* legger til horisontal scroll på veldig smale skjermer */
   }
   .instagram-video-block {
-    width: 360px;          /* Større ramme */
+    width: 360px;
     border: 2px solid #ccc;
     border-radius: 14px;
     padding: 22px;
@@ -91,22 +90,40 @@
     background-color: white;
     box-sizing: border-box;
     overflow: hidden;
+    text-align: center;
+    flex-shrink: 0;
   }
+
   .instagram-video-block h2 {
     color: #0066cc;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
     font-size: 18px;
   }
   .instagram-video-block blockquote {
     background: #FFF;
     border: 0;
-    margin: 0 auto;
-    width: 320px;           /* Embed-video litt mindre enn ramme */
+    margin-left: auto;
+    margin-right: auto;
+    width: 320px;
     max-width: 100%;
     padding: 0;
     box-shadow: none;
+    display: block;
+    box-sizing: border-box;
   }
-  @media (max-width: 600px) {
+  @media (max-width: 720px) {
+    #instagram-video-container {
+      max-width: 95vw;
+      flex-direction: column;
+      gap: 15px;
+      overflow-x: visible;
+    }
+    .instagram-video-block {
+      width: 100%;
+    }
+    .instagram-video-block h2 {
+      font-size: 16px;
+    }
     #map {
       width: 95vw;
       height: 350px;
@@ -117,20 +134,6 @@
     }
     #instagram-text {
       font-size: 14px;
-    }
-    #instagram-video-container {
-      max-width: 95vw;
-      flex-wrap: wrap;
-    }
-    .instagram-video-block {
-      width: 100%;
-      margin: 12px 0;
-    }
-    .instagram-video-block h2 {
-      font-size: 16px;
-    }
-    .instagram-video-block blockquote {
-      width: 100%;
     }
   }
 </style>
@@ -158,7 +161,7 @@
   </button>
 
   <div id="instagram-text">
-    You can see pictures and videos from Top Rope Solo on this profile
+    You can see pictures and video from Top Rope Solo on this profile
   </div>
 
   <div id="instagram-video-container">
@@ -182,7 +185,7 @@
         lat: 69.69472,
         lng: 18.63642,
         popup: `<strong>Korteidet</strong><br>
-                More information about Korteidet will be added here.<br>
+                More information about Korteidet will come here.<br>
                 <a href="https://klatreforer.tromsoklatring.no/area/3062" target="_blank" rel="noopener noreferrer">Climbing guide - Korteidet</a>`
       },
       {
@@ -190,7 +193,7 @@
         lat: 69.78386,
         lng: 18.78913,
         popup: `<strong>Lyfjorddalen</strong><br>
-                More information about Lyfjorddalen will be added here.<br>
+                More information about Lyfjorddalen will come here.<br>
                 <a href="https://klatreforer.tromsoklatring.no/area/2868" target="_blank" rel="noopener noreferrer">Climbing guide - Lyfjorddalen</a>`
       }
     ];
@@ -210,7 +213,7 @@
       markers[name] = marker;
     });
 
-    // Zoom out to show all markers on start
+    // Zoom out to all markers on startup
     const group = new L.featureGroup(Object.values(markers));
     map.fitBounds(group.getBounds().pad(0.2));
 
