--- a/index.html
+++ b/index.html
@@ -1,57 +1,232 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Instagram Video Embed</title>
+<title>Top Rope Solo – Tromsø</title>
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+  crossorigin=""
+/>
 <style>
   body {
-    background: #222;
-    color: white;
     font-family: Arial, sans-serif;
-    margin: 0;
+    background-color: #f0f4f8;
+    color: #333;
+    text-align: center;
     padding: 20px;
+    margin: 0;
+  }
+  h1 {
+    color: #0066cc;
+    margin-bottom: 10px;
+  }
+  #info-text {
+    max-width: 800px;
+    margin: 0 auto 20px auto;
+    font-size: 18px;
+    color: #444;
+  }
+  #buttons {
+    margin-bottom: 15px;
+  }
+  button {
+    background-color: #0066cc;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    padding: 10px 18px;
+    margin: 0 8px 8px 0;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+  }
+  button:hover {
+    background-color: #004a99;
+  }
+  #map {
+    height: 500px;
+    width: 80vw;
+    max-width: 800px;
+    margin: 0 auto 20px auto;
+    border-radius: 12px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+  }
+  #instagramBtn {
+    background-color: #e1306c; /* Instagram pink */
+    margin-top: 10px;
+  }
+  #instagramBtn:hover {
+    background-color: #b92e58;
+  }
+  #instagram-text {
+    max-width: 800px;
+    margin: 8px auto 0 auto;
+    font-size: 16px;
+    color: #555;
+  }
+  #instagram-video-container {
+    max-width: 720px;
+    margin: 20px auto 0 auto;
+    text-align: center;
+
     display: flex;
     justify-content: center;
+    gap: 24px;
+    flex-wrap: wrap;
   }
-  .video-container {
-    background: #000;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.8);
-    max-width: 360px;
+  .instagram-video-block {
+    width: 340px;
+    border: 1.5px solid #ccc;
+    border-radius: 12px;
+    padding: 20px;
+    margin: 12px 8px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    background-color: white;
+    box-sizing: border-box;
+    overflow: hidden;
+  }
+  .instagram-video-block h2 {
+    color: #0066cc;
+    margin-bottom: 8px;
+    font-size: 18px;
+  }
+  .instagram-video-block blockquote {
+    background: #FFF;
+    border: 0;
+    margin: 0 auto;
     width: 100%;
-    padding: 8px;
-    display: flex;
-    justify-content: center; /* Sentrerer innhold horisontalt */
+    padding: 0;
+    box-shadow: none;
   }
-  blockquote.instagram-media {
-    margin: 0 auto !important;
-    width: 100% !important;
-    min-width: 326px !important;
-    max-width: 360px !important;
-    border-radius: 3px !important;
-    box-shadow: 0 0 1px 0 rgba(0,0,0,0.5), 0 1px 10px 0 rgba(0,0,0,0.15) !important;
-    background: #FFF !important;
+  @media (max-width: 600px) {
+    #map {
+      width: 95vw;
+      height: 350px;
+    }
+    button {
+      font-size: 14px;
+      padding: 8px 14px;
+    }
+    #instagram-text {
+      font-size: 14px;
+    }
+    #instagram-video-container {
+      max-width: 95vw;
+      flex-direction: column;
+      gap: 15px;
+    }
+    .instagram-video-block {
+      width: 100%;
+    }
+    .instagram-video-block h2 {
+      font-size: 16px;
+    }
   }
 </style>
 </head>
 <body>
-  <div class="video-container">
-    <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DKxCoz_tbzW/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" style="background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-      <div style="padding:16px;">
-        <a href="https://www.instagram.com/reel/DKxCoz_tbzW/?utm_source=ig_embed&amp;utm_campaign=loading" style="background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank" aria-label="View this Instagram post on Instagram">
-          <!-- Innvendig innhold fra Instagram embed -->
-          <!-- Her vises videoen -->
-        </a>
-        <p style="color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;">
-          <a href="https://www.instagram.com/reel/DKxCoz_tbzW/?utm_source=ig_embed&amp;utm_campaign=loading" style="color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;" target="_blank" rel="noopener">
-            A post shared by Rope Solo Man (@rope.solo.man)
-          </a>
-        </p>
-      </div>
-    </blockquote>
+  <h1>Top Rope Solo - Tromsø 🧗‍♂️</h1>
+
+  <div id="info-text">
+    On this page, you will find information about places around Tromsø where Top Rope Solo is possible. The page will be updated continuously.
   </div>
 
+  <div id="buttons">
+    <button id="overviewBtn">Map overview</button>
+    <button data-lat="69.69472" data-lng="18.63642" data-name="Korteidet">Korteidet</button>
+    <button data-lat="69.78386" data-lng="18.78913" data-name="Lyfjorddalen">Lyfjorddalen</button>
+  </div>
+
+  <div id="map"></div>
+
+  <button id="instagramBtn" aria-label="Instagram profile Rope Solo Man">
+    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+      <path d="M7.75 2h8.5A5.75 5.75 0 0122 7.75v8.5A5.75 5.75 0 0116.25 22h-8.5A5.75 5.75 0 012 16.25v-8.5A5.75 5.75 0 017.75 2zm0 2A3.75 3.75 0 004 7.75v8.5A3.75 3.75 0 007.75 20h8.5a3.75 3.75 0 003.75-3.75v-8.5A3.75 3.75 0 0016.25 4h-8.5zM12 7a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6zm4.5-3.5a1.25 1.25 0 110 2.5 1.25 1.25 0 010-2.5z"/>
+    </svg>
+    Rope Solo Man
+  </button>
+
+  <div id="instagram-text">
+    You can see pictures and video from Top Rope Solo on this profile
+  </div>
+
+  <div id="instagram-video-container">
+    <div class="instagram-video-block">
+      <h2>Video from Korteidet</h2>
+      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DKxCoz_tbzW/" data-instgrm-version="14"></blockquote>
+    </div>
+
+    <div class="instagram-video-block">
+      <h2>Video from Lyfjorddalen</h2>
+      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DL8NKszNihY/" data-instgrm-version="14"></blockquote>
+    </div>
+  </div>
+
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
   <script async src="//www.instagram.com/embed.js"></script>
+  <script>
+    const locations = [
+      {
+        name: 'Korteidet',
+        lat: 69.69472,
+        lng: 18.63642,
+        popup: `<strong>Korteidet</strong><br>
+                Her kommer det mer informasjon om Korteidet.<br>
+                <a href="https://klatreforer.tromsoklatring.no/area/3062" target="_blank" rel="noopener noreferrer">Klatrefører - Korteidet</a>`
+      },
+      {
+        name: 'Lyfjorddalen',
+        lat: 69.78386,
+        lng: 18.78913,
+        popup: `<strong>Lyfjorddalen</strong><br>
+                Her kommer det mer informasjon om Lyfjorddalen.<br>
+                <a href="https://klatreforer.tromsoklatring.no/area/2868" target="_blank" rel="noopener noreferrer">Klatrefører - Lyfjorddalen</a>`
+      }
+    ];
+
+    const map = L.map('map');
+
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 19,
+      attribution:
+        '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+    }).addTo(map);
+
+    const markers = {};
+
+    locations.forEach(({name, lat, lng, popup}) => {
+      const marker = L.marker([lat, lng]).addTo(map).bindPopup(popup);
+      markers[name] = marker;
+    });
+
+    // Zoom ut til alle markører ved oppstart
+    const group = new L.featureGroup(Object.values(markers));
+    map.fitBounds(group.getBounds().pad(0.2));
+
+    const buttons = document.querySelectorAll('#buttons button[data-name]');
+    buttons.forEach(button => {
+      button.addEventListener('click', () => {
+        const lat = button.getAttribute('data-lat');
+        const lng = button.getAttribute('data-lng');
+        const name = button.getAttribute('data-name');
+
+        map.setView([lat, lng], 15);
+        markers[name].openPopup();
+      });
+    });
+
+    document.getElementById('overviewBtn').addEventListener('click', () => {
+      map.fitBounds(group.getBounds().pad(0.2));
+    });
+
+    document.getElementById('instagramBtn').addEventListener('click', () => {
+      window.open('https://www.instagram.com/rope.solo.man/', '_blank');
+    });
+  </script>
 </body>
 </html>
