--- a/index.html
+++ b/index.html
@@ -70,24 +70,27 @@
     color: #555;
   }
   #instagram-video-container {
-    max-width: 720px;
+    max-width: 800px;
     margin: 20px auto 0 auto;
-    text-align: center;
-
+    padding: 15px;
+    border: 2px solid #ccc;
+    border-radius: 12px;
+    background-color: white;
     display: flex;
     justify-content: center;
     gap: 24px;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    overflow-x: auto;
   }
   .instagram-video-block {
     width: 340px;
     border: 1.5px solid #ccc;
     border-radius: 12px;
     padding: 20px;
-    margin: 12px 8px;
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    background-color: white;
     box-sizing: border-box;
+    background-color: white;
+    flex-shrink: 0;
     overflow: hidden;
   }
   .instagram-video-block h2 {
@@ -119,6 +122,7 @@
       max-width: 95vw;
       flex-direction: column;
       gap: 15px;
+      overflow-x: visible;
     }
     .instagram-video-block {
       width: 100%;
@@ -176,16 +180,16 @@
         lat: 69.69472,
         lng: 18.63642,
         popup: `<strong>Korteidet</strong><br>
-                Her kommer det mer informasjon om Korteidet.<br>
-                <a href="https://klatreforer.tromsoklatring.no/area/3062" target="_blank" rel="noopener noreferrer">Klatrefører - Korteidet</a>`
+                Here you can find information about Korteidet.<br>
+                <a href="https://klatreforer.tromsoklatring.no/area/3062" target="_blank" rel="noopener noreferrer">Climbing guide – Korteidet</a>`
       },
       {
         name: 'Lyfjorddalen',
         lat: 69.78386,
         lng: 18.78913,
         popup: `<strong>Lyfjorddalen</strong><br>
-                Her kommer det mer informasjon om Lyfjorddalen.<br>
-                <a href="https://klatreforer.tromsoklatring.no/area/2868" target="_blank" rel="noopener noreferrer">Klatrefører - Lyfjorddalen</a>`
+                Here you can find information about Lyfjorddalen.<br>
+                <a href="https://klatreforer.tromsoklatring.no/area/2868" target="_blank" rel="noopener noreferrer">Climbing guide – Lyfjorddalen</a>`
       }
     ];
 
@@ -204,7 +208,7 @@
       markers[name] = marker;
     });
 
-    // Zoom ut til alle markører ved oppstart
+    // Zoom out to all markers at start
     const group = new L.featureGroup(Object.values(markers));
     map.fitBounds(group.getBounds().pad(0.2));
 
