--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     max-width: 800px;
     margin: 20px auto 0 auto;
     padding: 15px;
-    border: 2px solid #ccc;
+    border: 2px solid #ccc; /* felles ramme */
     border-radius: 12px;
     background-color: white;
     display: flex;
@@ -84,7 +84,7 @@
   }
   .instagram-video-block {
     width: 340px;
-    border: 1.5px solid #ccc;
+    /* border: 1.5px solid #ccc; */ /* fjernet denne */
     border-radius: 12px;
     padding: 20px;
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
@@ -229,8 +229,4 @@
     });
 
     document.getElementById('instagramBtn').addEventListener('click', () => {
-      window.open('https://www.instagram.com/rope.solo.man/', '_blank');
-    });
-  </script>
-</body>
-</html>
+      window.open('https://www.instagram.com/rope.solo
