--- a/index.html
+++ b/index.html
@@ -180,6 +180,11 @@
       <h2>Video from Lyfjorddalen</h2>
       <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DL8NKszNihY/" data-instgrm-version="14"></blockquote>
     </div>
+
+    <div class="instagram-video-block">
+      <h2>Video from Valhall</h2>
+      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DLU4pwkt80j/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" data-instgrm-version="14"></blockquote>
+    </div>
   </div>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
