--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       background-color: #0056b3;
     }
 
-    /* Updated container for videos */
+    /* Felles ramme rundt alle videoer */
     #instagram-video-container {
-      max-width: 1200px; /* wider to fit 3 videos */
+      max-width: 1200px;
       margin: 20px auto 0 auto;
       padding: 15px 24px;
       border: 2px solid #ccc;
@@ -50,33 +50,20 @@
       display: flex;
       justify-content: center;
       gap: 24px;
-      flex-wrap: wrap; /* allows wrapping on small screens */
+      flex-wrap: wrap;
     }
 
+    /* Hver video er nå bare et element uten egen ramme */
     .instagram-video-block {
       width: 340px;
-      border-radius: 12px;
-      padding: 20px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       box-sizing: border-box;
       background-color: white;
-      flex-shrink: 0;
-      overflow: hidden;
-      margin: 0;
+      text-align: center;
     }
 
     .instagram-video-block h3 {
-      text-align: center;
       font-size: 16px;
       margin-bottom: 10px;
-    }
-
-    /* Remove margin on first and last for symmetry */
-    .instagram-video-block:first-child {
-      margin-left: 0;
-    }
-    .instagram-video-block:last-child {
-      margin-right: 0;
     }
   </style>
 </head>
